# ssw-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: cargo.yml  release.yml
src/: commandline.rs  config.rs  curse.rs  log4j.rs  logging.rs  main.rs  manifest.rs  mc_version.rs  minecraft.rs  proxy.rs  ssw_error.rs  util.rs
src/commandline/: new.rs  start.rs
src/minecraft/: listener_task.rs  log4j.rs  log4shell.rs  manifest.rs  mc_version.rs  mc_version_data.rs  ping_task.rs  protocol.rs  restart_task.rs  shutdown_task.rs  state_task.rs
src/minecraft/manifest/: version.rs
src/minecraft/protocol/: serverbound.rs
v2/: Cargo.toml
v2/src/: commandline.rs  config.rs  lib.rs
v2/src/minecraft/: manifest.rs  protocol.rs  restart_task.rs
v2/src/minecraft/manifest/: version.rs
v2/src/minecraft/protocol/: serverbound.rs
v3/: Cargo.toml
v3/src/: cmd.rs  lib.rs
