[package]
name = "ssw"
version = "2.0.0"
edition = "2021"
default-run = "ssw"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "release_script"
test = false
bench = false

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
dirs = "5.0.0"
dunce = "1.0.4"
duration-string = "0.3.0"
flate2 = "1.0.25"
getset = "0.1.2"
java-properties = "1.4.1"
log = "0.4.17"
mcping = { git = "https://github.com/Scetch/mcping", features = ["tokio-runtime"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
simplelog = { version = "0.12.1", features = ["paris"] }
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.8"
toml = "0.7.3"
