[package]
name = "ssw"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssw = { version = "2.0.1", path = "./v2", optional = true }
tokio = { version = "1", features = ["full"] }

[features]
default = []
v2 = ["ssw"]
